--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Joys Homes & Developers</title>
+    <title>Joys Homes & Developers and other</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -380,6 +380,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
